Solved sidebar overflow for larger main content

--- a/static/main.css
+++ b/static/main.css
@@ -1,20 +1,26 @@
+#wrapper {
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
 body {
     background: #E9EBEE;
     font-family: "Times New Roman", Times, serif;
     font-size: 100%;
     height: 100%;
-    overflow: hidden;
+    padding-top: 57px;
 }
 
 .bg-custom {
     background: #3E3455;
 }
 
-#wrapper > #sidebar-wrapper {
-    height: 150px;
-    margin-left: 0px;   
-    min-height: 100vh;
-    overflow-y: scroll;
+.bg-custom.navbar {
+    border-bottom: 1px solid #2C253C;
+}
+
+#sidebar-wrapper {
+    border-right: 1px solid #2C253C;
     overflow-x: hidden;
     position: relative;
     transition: margin .25s ease-out;
@@ -26,12 +32,6 @@ body {
 
 #wrapper.toggled > #sidebar-wrapper {
     margin-left: -400px;
-    overflow: hidden;
-}
-
-#sidebar-wrapper > h2 {
-    color: #E5CC80;
-    font-weight: bold;
 }
 
 #sidebar-wrapper > ul {
@@ -44,7 +44,7 @@ body {
 }
 
 #sidebar-wrapper > ul > li > a {
-    border-top: 1px solid #2C253C;
+    border-bottom: 1px solid #2C253C;
     display: block;
 }
 
@@ -77,6 +77,7 @@ body {
 }
 
 @media screen and (max-width: 320px) {
+    body { padding-top: 50px; }
     h1 { font-size: 1.4em; }
     h2 { font-size: 1.075em; }
     h3 { font-size: 0.85em}
@@ -87,6 +88,7 @@ body {
 }
 
 @media screen and (min-width: 320px) and (max-width: 479px) {
+    body { padding-top: 50px; }
     h1 { font-size: 1.7em; }
     h2 { font-size: 1.375em; }
     h3 { font-size: 1.15em}
@@ -97,15 +99,15 @@ body {
 }
 
 @media screen and (min-width: 480px) and (max-width: 767px){ 
-    h1 { font-size: 2em;}   
-    h2 { font-size: 1.575em;}
-    h3 { font-size: 1.2em;}
-    p { font-size: 0.85em;}
+    h1 { font-size: 2em; }
+    h2 { font-size: 1.575em; }
+    h3 { font-size: 1.2em; }
+    p { font-size: 0.85em; }
 }
 
 
 @media screen and (min-width: 768px) and (max-width: 991px){ 
-    h1 {  font-size: 2.2em; } 
+    h1 { font-size: 2.2em; }
     h2 { font-size: 1.675em; }
     h3 { font-size: 1.35em; }
     p { font-size: 0.9em; }
@@ -114,6 +116,6 @@ body {
 @media screen and (min-width: 992px) {
     h1 {  font-size: 2.4em; } 
     h2 { font-size: 1.775em; }
-    h3 { font-size: 1.45em;}
+    h3 { font-size: 1.45em; }
     p { font-size: 1em; }
 }
